--- a/BarcodeScanner.Mobile.Maui/BarcodeScanner.Mobile.Maui.csproj
+++ b/BarcodeScanner.Mobile.Maui/BarcodeScanner.Mobile.Maui.csproj
@@ -22,9 +22,9 @@
 		<RootNamespace>BarcodeScanner.Mobile.Maui</RootNamespace>
 
 		<Product></Product>
-		<AssemblyVersion>6.3.0.25</AssemblyVersion>
-		<AssemblyFileVersion>6.3.0.25</AssemblyFileVersion>
-		<Version>6.3.0.25-pre</Version>
+		<AssemblyVersion>6.3.0.26</AssemblyVersion>
+		<AssemblyFileVersion>6.3.0.26</AssemblyFileVersion>
+		<Version>6.3.0.26-pre</Version>
 		<NeutralLanguage>en</NeutralLanguage>
 
 		<!--Version of C# to use -->
@@ -33,14 +33,17 @@
 		<Authors>Jimmy Pun, Anton Yaroshenko</Authors>
 		<Description>.NET 7 upgrade for BarcodeScanner.XF, Powerful MAUI barcode scanning library using GoogleVision API for Android and iOS.</Description>
 		<PackageIconUrl>https://banner2.kisspng.com/20180713/olo/kisspng-nuget-net-framework-package-manager-software-repo-nuget-5b487dc3ba81a7.452233091531477443764.jpg</PackageIconUrl>
-		<RepositoryUrl>https://github.com/JimmyPun610/BarcodeScanner.Mobile</RepositoryUrl>
+		<RepositoryUrl>https://github.com/GitHubGedea/BarcodeScanner.Mobile</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/JimmyPun610/BarcodeScanner.Mobile</PackageProjectUrl>
 		<PackageLicenseUrl>https://github.com/JimmyPun610/BarcodeScanner.Mobile</PackageLicenseUrl>
 		<RepositoryType></RepositoryType>
 		<PackageTags>MAUI Barcode Scanning Tools</PackageTags>
 		<PackageReleaseNotes>1. Update dependency package for Android</PackageReleaseNotes>
 		<Copyright>Copyright 2023</Copyright>
-		<PackOnBuild>true</PackOnBuild>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+	    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 
